argocd/kustomize/simple-client/example-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-client
  labels:
    app: simple-client
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: 'true'
    keel.sh/pollSchedule: '@every 1m'
    keel.sh/trigger: poll
spec:
  selector:
    matchLabels:
      app: simple-client
  template:
    metadata:
      labels:
        app: simple-client
      annotations:
        sidecar.opentelemetry.io/inject: 'true'
    spec:
      serviceAccountName: simple
      containers:
      - name: app
        image: ghcr.io/kwangil77/simple-client
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
        resources:
          limits:
            cpu: 1000m
            memory: 4096Mi
          requests:
            cpu: 200m
            memory: 1024Mi
      nodeSelector:
        kubernetes.io/arch: amd64
        team: devops
        service: devops-service
        performance_type: standard
